# validator-service

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Procfile  README copy.md  README.md  api.py  app.py  config.py  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml  setup.cfg
doc/: openapi.yaml
docker/: Dockerfile  start_service.sh
routers/middlewares/: request_id.py
routers/validator/: __init__.py  payload.py  payload_v2.py  router.py  router_v2.py
utils/: headers.py  request_id.py  setup_logger.py
validator/: __init__.py  account.py  email.py  phone_number.py  pni.py
validators/: account.py  email.py  phone_number.py
