[tool.poetry]
name = "validator-service"
version = "0.1.0"
description = "Validator service"
authors = ["Tobias Jeppesen <github@tobiasjeppesen.com>"]

[tool.poetry.dependencies]
python = "3.10.12"
fastapi = "^0.90.0"
uvicorn = "^0.20.0"
pydantic = {version = "1.10.4", extras = ["email"]}
aiohttp = "^3.7.4"
bankkonto = {git = "https://github.com/zensum/bankkonto.git", develop = true, rev = "be80a23"}
phonenumbers = "^8.12.21"
fodselsnummer = {git = "https://github.com/zensum/fodselsnummer.git", rev="ef6f69694c302e7cabe610eead58fe82d6494d43"}
personnummer = "^3.0.2"
aiodns = "^3.0.0"
async_lru = "^1.0.2"
gunicorn = "^20.1.0"
uvloop = "^0.17.0"
httptools = "^0.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
mypy = "^1.0.0"
flake8-quotes = "^3.2.0"
debugpy = "^1.2.1"
watchdog = {extras = ["watchmedo"], version = "^2.1.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
